--- a/webccDemo/webccDemo.vcxproj.filters
+++ b/webccDemo/webccDemo.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="webccDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fakeDB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="fakeDB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
