add file upload demo.

--- a/webcc20200813/webcc20200813.vcxproj
+++ b/webcc20200813/webcc20200813.vcxproj
@@ -78,6 +78,9 @@
     <ClCompile Include="url.cc" />
     <ClCompile Include="utility.cc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\readme.md" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
