--- a/webccDemo/webccDemo.vcxproj
+++ b/webccDemo/webccDemo.vcxproj
@@ -154,6 +154,11 @@
   <ItemGroup>
     <ClInclude Include="fakeDB.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\htmlRoot\Demo_fileUpload.htm">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
